Update Python - TED Recommendation system - Script.ipynb

--- a/Python_TEDrecommendation/Python - TED Recommendation system - Script.ipynb
+++ b/Python_TEDrecommendation/Python - TED Recommendation system - Script.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# DIGI405-20S1 - Topic Modeling TED.com transcripts\n",
     "\n",
-    "This notebook introduces Gensim for topic modeling. The 2018 TED.com transcripts are also available for download on the datasets page on Learn if you wish to train models using TMT.\n",
+    "This notebook introduces Gensim for topic modeling.",
     "\n",
     "Work through the notebook. The key things to do are:\n",
     "1. to try training some different size models (e.g. 10 topics, 30 topics, 50 topics);  \n",
